[gd_scene load_steps=4 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Wall.tscn" type="PackedScene" id=3]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="HBoxContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -58.0
margin_top = -27.5
margin_right = 56.0
margin_bottom = 27.5

[node name="OnlineButton" type="Button" parent="CanvasLayer/MainMenu"]
margin_right = 55.0
margin_bottom = 55.0
text = "Online"

[node name="OfflineButton" type="Button" parent="CanvasLayer/MainMenu"]
margin_left = 59.0
margin_right = 114.0
margin_bottom = 55.0
text = "Offline"

[node name="ConnectionPanel" type="WindowDialog" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -143.5
margin_top = -57.0
margin_right = 143.5
margin_bottom = 57.0
window_title = "Online"

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/ConnectionPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 280.0
margin_bottom = 107.0
columns = 2

[node name="HostLabel" type="Label" parent="CanvasLayer/ConnectionPanel/GridContainer"]
margin_right = 134.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 2
text = "Host:"

[node name="HostField" type="LineEdit" parent="CanvasLayer/ConnectionPanel/GridContainer"]
margin_left = 138.0
margin_right = 272.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 2
text = "127.0.0.1"

[node name="PortLabel" type="Label" parent="CanvasLayer/ConnectionPanel/GridContainer"]
margin_top = 34.0
margin_right = 134.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 2
text = "Client:"

[node name="PortField" type="LineEdit" parent="CanvasLayer/ConnectionPanel/GridContainer"]
margin_left = 138.0
margin_top = 34.0
margin_right = 272.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 2
text = "9999"

[node name="HostButton" type="Button" parent="CanvasLayer/ConnectionPanel/GridContainer"]
margin_top = 68.0
margin_right = 134.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 2
text = "Host"

[node name="ClientButton" type="Button" parent="CanvasLayer/ConnectionPanel/GridContainer"]
margin_left = 138.0
margin_top = 68.0
margin_right = 272.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 2
text = "Client"

[node name="ConnectionLabel" type="Label" parent="CanvasLayer"]
anchor_right = 1.0
margin_bottom = 14.0

[node name="ResetButton" type="Button" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -48.0
margin_top = -20.0
text = "Reset"

[node name="SyncLostLabel" type="Label" parent="CanvasLayer"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -106.0
margin_bottom = 14.0
text = "Regaining Sync..."

[node name="HostPlayer" parent="." instance=ExtResource( 2 )]
position = Vector2( 156, 295 )

[node name="ClientPlayer" parent="." instance=ExtResource( 2 )]
position = Vector2( 855, 295 )

[node name="Wall" parent="." instance=ExtResource( 3 )]

[node name="Wall2" parent="." instance=ExtResource( 3 )]
position = Vector2( 1025, -2 )

[connection signal="pressed" from="CanvasLayer/MainMenu/OnlineButton" to="." method="_on_OnlineButton_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/OfflineButton" to="." method="_on_OfflineButton_pressed"]
[connection signal="pressed" from="CanvasLayer/ConnectionPanel/GridContainer/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="CanvasLayer/ConnectionPanel/GridContainer/ClientButton" to="." method="_on_ClientButton_pressed"]
[connection signal="pressed" from="CanvasLayer/ResetButton" to="." method="_on_ResetButton_pressed"]
